# audex

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CHANGELOG  CMakeLists.txt  Messages.sh  README  README.md  TODO  audex-rip-audiocd.desktop  audex.desktop  audex.kcfg  audex.notifyrc  audex.qrc  audexui.rc  config.h.cmake  main.cpp  mainwindow.cpp  mainwindow.h  org.kde.audex.appdata.xml  org.kde.audex.desktop  preferences.kcfgc  snapcraft.yaml
cmake/modules/: FindCdparanoia.cmake  Findcdio.cmake  Findcdio_cdda.cmake  Findcdio_paranoia.cmake
core/: audex.cpp  audex.h
datatypes/: cdda.cpp  cdda.h  cdinfo.cpp  cdinfo.h  dataset.cpp  dataset.h  driveinfo.cpp  driveinfo.h  error.h  message.cpp  message.h  metadata.cpp  metadata.h  parameters.cpp  parameters.h  samplearray.cpp  samplearray.h  toc.cpp  toc.h
device/: cdparanoia.cpp  cdparanoia.h  cdtext_reader_task.cpp  cdtext_reader_task.h  cdtextreader.cpp  cdtextreader.h  drive.cpp  drive.h  driveinfo_fetcher_task.cpp  driveinfo_fetcher_task.h  driveinforetriever.cpp  driveinforetriever.h  manager.cpp  manager.h  mcnisrc_reader_task.cpp  mcnisrc_reader_task.h  rip_task.cpp  rip_task.h  scsi.cpp  scsi.h  task.cpp  task.h  toc_reader_task.cpp  toc_reader_task.h  tocreader.cpp  tocreader.h
dialogs/: cddaheaderdatadialog.cpp  cddaheaderdatadialog.h  cddaheaderdatawidgetUI.ui  commandwizarddialog.cpp  commandwizarddialog.h  commandwizardwidgetUI.ui  coverbrowserdialog.cpp  coverbrowserdialog.h  coverbrowserwidgetUI.ui  errordialog.cpp  errordialog.h  extractingprogressdialog.cpp  extractingprogressdialog.h  extractingprogresswidgetUI.ui  filenameschemewizarddialog.cpp  filenameschemewizarddialog.h  filenameschemewizardwidgetUI.ui  logviewdialog.cpp  logviewdialog.h  logviewwidgetUI.ui  patternwizarddialog.cpp  patternwizarddialog.h  patternwizardwidgetUI.ui  profiledatacoverdialog.cpp  profiledatacoverdialog.h  profiledatacoverwidgetUI.ui  profiledatacuesheetdialog.cpp  profiledatacuesheetdialog.h  profiledatacuesheetwidgetUI.ui  profiledatadialog.cpp  profiledatadialog.h  profiledatahashlistdialog.cpp  profiledatahashlistdialog.h  profiledatahashlistwidgetUI.ui  profiledatainfodialog.cpp  profiledatainfodialog.h  profiledatainfowidgetUI.ui  profiledatalogfiledialog.cpp  profiledatalogfiledialog.h  profiledatalogfilewidgetUI.ui  (+25 more)
icons/: CMakeLists.txt
images/: CMakeLists.txt
models/: audiometadata.h  cddamodel.cpp  cddamodel.h  cdinfomodel.cpp  cdinfomodel.h  drivelistmodel.cpp  drivelistmodel.h  metadata.cpp  metadata.h  profilemodel.cpp  profilemodel.h
po/ar/: audex.po
po/ast/: audex.po
po/bs/: audex.po
po/ca/: audex.po
po/ca@valencia/: audex.po
po/cs/: audex.po
po/da/: audex.po
po/de/: audex.po
po/en_GB/: audex.po
po/eo/: audex.po
po/es/: audex.po
po/et/: audex.po
po/eu/: audex.po
po/fi/: audex.po
po/fr/: audex.po
po/ga/: audex.po
po/gl/: audex.po
po/he/: audex.po
po/hi/: audex.po
po/hu/: audex.po
po/ia/: audex.po
po/it/: audex.po
po/ja/: audex.po
po/ka/: audex.po
po/km/: audex.po
po/ko/: audex.po
po/lt/: audex.po
po/mai/: audex.po
po/mr/: audex.po
po/nds/: audex.po
po/nl/: audex.po
po/pl/: audex.po
po/pt/: audex.po
po/pt_BR/: audex.po
po/ro/: audex.po
po/ru/: audex.po
po/sa/: audex.po
po/sk/: audex.po
po/sl/: audex.po
po/sv/: audex.po
po/tr/: audex.po
po/ug/: audex.po
po/uk/: audex.po
po/zh_CN/: audex.po
po/zh_TW/: audex.po
test/: CMakeLists.txt  devicestest.cpp  devicestest.h
utils/: accuraterip.cpp  accuraterip.h  audex.cpp  audex.h  cachedimage.cpp  cachedimage.h  cddacdio.cpp  cddacdio.h  cddadevices.cpp  cddadevices.h  cddaextractthread.cpp  cddaextractthread.h  cddaparanoia.cpp  cddaparanoia.h  cddaripthread.cpp  cddaripthread.h  cddasolid.cpp  cddasolid.h  cddbid.cpp  cddbid.h  coverfetcher.cpp  coverfetcher.h  crc.cpp  crc.h  crc32hash.cpp  crc32hash.h  cuesheet_writer.cpp  cuesheet_writer.h  cuesheetwriter.cpp  cuesheetwriter.h  discidcalculator.cpp  discidcalculator.h  encoderassistant.cpp  encoderassistant.h  encoderwrapper.cpp  encoderwrapper.h  error.h  errordialog.cpp  errordialog.h  hashlist.cpp  (+21 more)
widgets/: cddaheaderwidget.cpp  cddaheaderwidget.h  customwidget.cpp  customwidget.h  customwidgetUI.ui  devicewidget.cpp  devicewidget.h  devicewidgetUI.ui  faacwidget.cpp  faacwidget.h  faacwidgetUI.ui  flacwidget.cpp  flacwidget.h  flacwidgetUI.ui  generalsettingswidget.cpp  generalsettingswidget.h  generalsettingswidgetUI.ui  lamewidget.cpp  lamewidget.h  lamewidgetUI.ui  oggencwidget.cpp  oggencwidget.h  oggencwidgetUI.ui  opusencwidget.cpp  opusencwidget.h  opusencwidgetUI.ui  profilewidget.cpp  profilewidget.h  profilewidgetUI.ui  remoteserversettingswidget.cpp  remoteserversettingswidget.h  remoteserversettingswidgetUI.ui  wavewidget.cpp  wavewidget.h  wavewidgetUI.ui
